# parabot

./: .gitignore  Cargo.toml  README.md  example_conf.toml  parabot_empty.db
examples/: default.rs  logger.rs
migrations/20170627120831_pending_tells/: down.sql  up.sql
migrations/20170629102134_last_weather_search/: down.sql  up.sql
migrations/20170629102134_location_cache/: down.sql  up.sql
migrations/20170630143553_geocode_cache/: down.sql  up.sql
parabot-core/: Cargo.toml
parabot-core/src/: config.rs  error.rs  lib.rs  message.rs
parabot-core/src/modules/: choose.rs  dice.rs  mod.rs
parabot-derive/: Cargo.toml
parabot-derive/src/: lib.rs
src/: config.rs  error.rs  lib.rs  main.rs  message.rs  models.rs  schema.rs
src/modules/: choose.rs  ddg.rs  dice.rs  google.rs  help.rs  mod.rs  tell.rs  url.rs  weather.rs
