[workspace]
members = ["parabot-derive"]

[package]
name = "parabot"
version = "1.0.0"
edition = "2018"
authors = ["Jonathan Schleußer <ParadoxSpiral@riseup.net>"]

[dependencies]
chrono = "0.4"
diesel = {version = "1", default-features = false, features = ["sqlite"]}
futures = "0.1"
linkify = "0.3"
parabot-derive = {path = "parabot-derive"}
parking_lot = "0.7"
serde = {version = "1", features = ["derive"]}
toml = "0.4"
tokio = "0.1"
unicode-segmentation = "1"

# Optional module deps
rand = {version = "0.6", optional = true}
regex = {version = "1", optional = true}
shlex = {version = "0.1", optional = true}

# Tokio reform of the irc crate is currently not on crates.io
[dependencies.irc]
git = "https://github.com/aatxe/irc.git"
branch = "0.14"
rev = "991e030"

[dev-dependencies]
env_logger = "0.6"
shellexpand = "1"

[profile.release]
lto = true

[features]
default = ["modules"]
modules = ["rand", "regex", "shlex"]

[[example]]
name = "default"
