# Copyright (C) 2017  ParadoxSpiral
#
# This file is part of parabot.
#
# Parabot is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# Parabot is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with Parabot.  If not, see <http://www.gnu.org/licenses/>.


[package]
name = "parabot"
version = "0.1.0"
authors = ["ParadoxSpiral <ParadoxSpiral@riseup.net>"]

[dependencies]
chrono = "0.4"
chrono-tz = "0.5"
crossbeam = "0.7"
diesel = { version = "1", features = ["sqlite"] }
dotenv = "0.14"
encoding = "0.2"
forecast = "2"
html5ever = "0.23"
humansize = "1"
irc = "0.13"
lazy_static = "1"
mime = "0.3"
parking_lot = "0.8"
percent-encoding = "1"
rand = "0.7"
rayon = "1"
regex = "1"
reqwest = "0.9"
serde = "1"
serde_derive = "1"
serde_json = "1"
shlex = "0.1"
slog = { version = "2", features = ["max_level_trace", "release_max_level_info"] }
slog-async = "2"
slog-term = "2"
threadpool = "1"
toml = "0.5"
unicode-segmentation = "1"

[dependencies.wolfram_alpha]
git = "https://github.com/ParadoxSpiral/wolfram-alpha-rs"
rev = "198387b"
version = "0.4"

[dependencies.ddg]
git = "https://github.com/XAMPPRocky/ddg"
rev = "d22d451"

[dependencies.urlshortener]
git = "https://github.com/ParadoxSpiral/urlshortener-rs"
rev = "5fb6e62"

[features]
default = []
show_description = [] # Show the description meta tag in url-info

[profile.release]
lto = true
opt-level = 3
