[package]
name = "parabot-core"
version = "1.0.0"
authors = ["Jonathan Schleußer <ParadoxSpiral@riseup.net>"]

[dependencies]
chrono = "0.4"
futures = "0.1"
linkify = "0.3"
parking_lot = "0.7"
rand = {version = "0.6", optional = true}
regex = {version = "1", optional = true}
serde = "1"
serde_derive = "1"
shlex = {version = "0.1", optional = true}
toml = "0.4"
tokio = "0.1"
unicode-segmentation = "1"

[dependencies.diesel]
version = "1"
default-features = false
features = ["sqlite"]

# Tokio reform of the irc crate is currently not on crates.io
[dependencies.irc]
version = "*"
git = "https://github.com/aatxe/irc.git"
branch = "0.14"
rev = "991e030"

[features]
default = ["modules"]
modules = ["rand", "regex", "shlex"]
