[package]
name = "parabot-derive"
version = "1.0.0"
edition = "2018"
authors = ["Jonathan Schleußer <ParadoxSpiral@riseup.net>"]

[lib]
proc-macro = true

[dependencies]
darling = "0.8"
proc-macro2 = "0.4"
syn = {version = "0.15", default-features = false, features = ["full", "parsing"]}
quote = "0.6"
